--- a/style.css
+++ b/style.css
@@ -107,7 +107,10 @@ p{
 .box-especialidades img{
   width: 100%;
 }
-
+.mapa{
+  width: 100%;
+  margin-bottom: 20px;
+}
 .link-horario{
   text-align: center;
   margin-top: 50px;
